Try adding a z-index to the css to fix the bug.  Again it does not fix it but again I want to keep track of what I have tried.

--- a/templates/jmws_tomh_idmygadget/css/idMyGadget.css
+++ b/templates/jmws_tomh_idmygadget/css/idMyGadget.css
@@ -6,3 +6,6 @@
 h2.site-title {
 	display: inline;
 }
+#phone-burger-icon-left, #phone-burger-icon-right {
+	z-index: 1;
+}
